# bip39

./: .appveyor.yml  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  library.json  platformio.ini
.travis/: install_arduino_ide.sh  install_platform_io.sh  script_arduino_ide.sh  script_clang_format.sh  script_clang_tidy.sh  script_desktop.sh  script_platform_io.sh
cmake/: CodeCoverage.cmake  FindPicoSHA2.cmake  bip39Config.cmake.in
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
examples/arduino/: bip39.ino
include/bip39/: bip39.h  word_list.h
make_dictionary/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bip39.cpp  bip39.h  en.h  en_str.h  util.cpp  util.h
src/dictionary/: chinese_simplified_str.h  chinese_traditional_str.h  english_str.h  french_str.h  italian_str.h  japanese_str.h  korean_str.h  spanish_str.h
src/include/bip39/: bip39.h  word_list.h
src/lib/PicoSHA2/: picosha2.h
test/: CMakeLists.txt  main.cpp  platformio.ini
test/src/: bip39_tests.cpp  bip39_tests.h  hex.h  util.h  word_list_tests.cpp
test/src/IoT/: main.cpp
test/src/IoT/gtest/: gtest.h
